--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Doohicky
-description: a site about nothing
+title: Activate Hub
+description: copy the description from _config.yml here
 ---
 
 <div id="home" class="row">
