--- a/Research.html
+++ b/Research.html
@@ -1,2 +1,112 @@
-hello world!!!
+<!DOCTYPE html>
+<html lang="en-US">
 
+	<head>
+		<style>
+			div.onepage {
+			margin:0 auto;
+			width:1000px;
+			background-color:rgb(240,250,250);
+			color:black;
+			padding:20px;
+			}
+
+			table.index {
+			width:750px;
+			margin:auto;
+			text-align:center;
+			border:0;
+			border-collapse:collapse;
+			}
+			
+			a.index {
+			font-family:Arial, Helvetica, sans-serif;
+			color:rgb(120,40,090);
+			text-decoration:none;
+			}
+			a.norm {
+			color:rgb(120,40,090);
+			text-decoration:none;
+			}
+			
+			
+			body {
+				font-family:'Candara';
+				background-color:white;
+				  }
+			h1   {color:red;}
+		</style> 
+		
+		<title>V. V. Anurag</title>
+	</head>
+
+	
+	
+	
+	
+	<body align="center">
+		<h1 style="font-family:arial"> V V Anurag </h1>
+		<em>vv.anurag[at]research.iiit.ac.in, anuragpbox[at]gmail.com</em>
+		<br>
+		<br>
+		<table class="index" align="center" border="0">
+			<tr>
+				<td><a href="sample_site.html" class="index">Home</a></td>
+				<td><a href="#" class="index">Research</a></td>
+				<td><a href="Publications.html" class="index">Publications</a></td>
+				<td><a href="Academics.html" class="index">Acedamics</a></td>
+				<td><a href="Resume_of_Anurag_VV.pdf" class="index" style="color:red">Download CV</a></td>
+			</tr>
+		</table>		
+		<!--<address style="text-align:center">
+			Room.No 361,<br>
+			NBH, IIIT-Hyderabad, Gachibowli,<br>
+			Hyderabad, Telangana.<br>
+			500032.<br>
+		</address>-->
+		<hr>
+	<!--<address style="text-align:center">
+			Room.No 361,<br>
+			NBH, IIIT-Hyderabad, Gachibowli,<br>
+			Hyderabad, Telangana.<br>
+			500032.<br>
+		</address>-->
+		</address>-->
+		<!--<div align="center" style="margin:auto;width:600px;background-color:grey">
+		asdasd
+		</div>
+		-->
+		
+		<div class="onepage" align="left" style="height:1000px">
+			Masters Thesis: <h3><a href="thesis.pdf">Reactionless Visual Servoing of Floating Base Dual-Arm Manipulator</a></h3>
+			<hr>
+			<h3> Reactionless Visual Servoing of Space Manipulator.</h3>
+			<div style="height:400px;width:400px;float:left;background-color:rgb(240,250,250);">
+				<img src="dualarm_schematic.png" alt="This is my pic" height="70%">
+			</div>
+			<div style="height:400px;width:600px;float:right;background-color:rgb(240,250,250);">
+				<ul>
+					<li>We targeted the problem of base attitude disturbance during manipulation of dual arm on a floating base.</li>
+					<li>we used Generalized Jacobian Matrix to control the end-effectors while accounting for the base disturbance. </li>
+					<li>A redundant system can perform the task in more than one way.
+						The choice of solution can be explored using the nullspace of the jacobian defining the primary task(visual servoing).
+					<li>Task priority formulation was used to project a secondary task onto the nullspace of the primary task.
+					<li>Secondary task was formulated as a minimization of cost function for attitude disturbance.
+						This way, we could reduce the base attitude disturbance to zero. 
+				</ul>
+			</div>
+			<div align="center">
+				<iframe width="636/2" height="360" src="https://www.youtube.com/embed/YKY5zVIO0Rw" frameborder="0" allowfullscreen></iframe>
+			</div>	
+			<hr>
+			<h3>To be updated...</h3>
+			
+		</div>
+		
+	</body>
+
+
+
+
+
+</html>
