--- a/Research.html
+++ b/Research.html
@@ -51,8 +51,8 @@
 		<br>
 		<table class="index" align="center" border="0">
 			<tr>
-				<td><a href="sample_site.html" class="index">Home</a></td>
-				<td><a href="#" class="index">Research</a></td>
+				<td><a href="#" class="index">Home</a></td>
+				<td><a href="Research.html" class="index">Research</a></td>
 				<td><a href="Publications.html" class="index">Publications</a></td>
 				<td><a href="Academics.html" class="index">Acedamics</a></td>
 				<td><a href="Resume_of_Anurag_VV.pdf" class="index" style="color:red">Download CV</a></td>
