--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div class="onepage" align="left"> 
 				<table border="0">
 					<td>
-						<img src="images/istan1.jpg" alt="This is my pic" height="70%">
+						<img src="images/istan1.png" alt="This is my pic" height="70%">
 					</td>
 					<td style="padding:60px;padding-bottom:00px">
 						<!--<h3 style="font-family:courier;color:red;width:900px">About me</h3>	-->
