--- a/Research.html
+++ b/Research.html
@@ -82,7 +82,7 @@
 			<hr>
 			<h3> Reactionless Visual Servoing of Space Manipulator.</h3>
 			<div style="height:400px;width:400px;float:left;background-color:rgb(240,250,250);">
-				<img src="images/dualarm_schematic.png" alt="This is my pic" height="70%">
+				<img src="images/dualarm_schematic.png" alt="dualarm_schematic" height="70%">
 			</div>
 			<div style="height:400px;width:600px;float:right;background-color:rgb(240,250,250);">
 				<ul>
