--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 		<br>
 		<table class="index" align="center" border="0">
 			<tr>
-				<td><a href="#" class="index">Home</a></td>
+				<td><a href="index.html" class="index">Home</a></td>
 				<td><a href="Research.html" class="index">Research</a></td>
-				<td><a href="Publications.html" class="index">Publications</a></td>
+				<td><a href="https://scholar.google.co.in/citations?user=nvZtwIoAAAAJ&hl=en" class="index">Publications</a></td>
 				<td><a href="Academics.html" class="index">Acedamics</a></td>
 				<td><a href="Resume_of_Anurag_VV.pdf" class="index" style="color:red">Download CV</a></td>
 			</tr>
