--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	
 	
 	<body align="center">
-		<h1 style="font-family:arial"> V V Anurag </h1>
+		<h1 style="font-family:arial"> Media Arts Spring 2023 Showcase </h1>
 		<em>vv.anurag[at]research.iiit.ac.in, anuragpbox[at]gmail.com</em>
 		<we>
 		<br>
