--- a/index.html
+++ b/index.html
@@ -71,15 +71,11 @@
 		<div class="onepage" align="left"> 
 				<table border="0">
 					<td>
-						<img src="images/MA_site.png" alt="This is my pic" height="70%">
+						<img src="images/MA_site_small.png" alt="This is my pic" height="70%">
 					</td>
 					<td style="padding:60px;padding-bottom:00px">
 						<!--<h3 style="font-family:courier;color:red;width:900px">About me</h3>	-->
-						I am a Masters Research student at <a href="http://robotics.iiit.ac.in/" class="norm" style="color:blue">
-						Robotics Research Center</a> in <a href="http://robotics.iiit.ac.in/" class="norm" style="color:blue">IIIT-Hyderabad</a> under the guidance of 
-						<a href="http://surilshah.weebly.com/" class="norm" style="color:blue">Dr.Suril V.Shah</a> and
-						<a href="http://faculty.iiit.ac.in/~mkrishna/" class="norm" style="color:blue">Dr.K Madhava Krishna</a>.
-						I have a backing of B.Tech degree in Mechanigal Engineering from VIT, vellore. 
+						The awsome class of Machine Learning 
 						<br>
 						<br>	
 						My inspiration comes from amazing abilities displayed by the biological systems of nature.
