--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					</td>
 					<td style="padding:60px;padding-bottom:00px">
 						<!--<h3 style="font-family:courier;color:red;width:900px">About me</h3>	-->
-						The awsome class of Machine Learning 
+						The awsome class of Machine Learning for Media Arts where we learn how to use the awsome superpowers of a computer to fuel artistic expression
 						<br>
 						<br>	
 						My inspiration comes from amazing abilities displayed by the biological systems of nature.
