--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 		<table class="index" align="center" border="0">
 			<tr>
 				<td><a href="index.html" class="index">Home</a></td>
-				<td><a href="Research.html" class="index">Research</a></td>
-				<td><a href="https://scholar.google.co.in/citations?user=nvZtwIoAAAAJ&hl=en" class="index">Publications</a></td>
-				<td><a href="Academics.html" class="index">Acedamics</a></td>
-				<td><a href="Resume_of_Anurag_VV.pdf" class="index" style="color:red">Download CV</a></td>
+				<td><a href="Research.html" class="index">People</a></td>
+				<td><a href="https://scholar.google.co.in/citations?user=nvZtwIoAAAAJ&hl=en" class="index">Gallery</a></td>
+				<td><a href="Academics.html" class="index">Tools</a></td>
+				
 			</tr>
 		</table>		
 		<!--<address style="text-align:center">
@@ -78,14 +78,10 @@
 						The awsome class of Machine Learning for Media Arts where we learn how to use the awsome superpowers of a computer to fuel artistic expression
 						<br>
 						<br>	
-						My inspiration comes from amazing abilities displayed by the biological systems of nature.
-						I aspire to bring robotic systems on par with biological counterparts in terms of perception, movement and control.
-						<br>
-						I am eager to explore the following research topics
 						<ul>
-							<li>Dynamic locomotion and manipulation</li>
-							<li>Optimization for control and motion planning of robots</li>
-							<li>Learning applied bridging perception and control</li>
+							<li>Artist 1</li>
+							<li>Artist 2</li>
+							<li>Artist 3</li>
 						</ul>
 					</td>
 				</table>
