--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 	
 	<body align="center">
 		<h1 style="font-family:arial"> Media Arts Spring 2023 Showcase </h1>
-		<em>vv.anurag[at]research.iiit.ac.in, anuragpbox[at]gmail.com</em>
 		<we>
 		<br>
 		<br>
@@ -71,7 +70,7 @@
 		<div class="onepage" align="left"> 
 				<table border="0">
 					<td>
-						<img src="images/MA_site_small.png" alt="This is my pic" height="10%">
+						<img src="images/MA_site_small.png" alt="This is my pic" height="10% width=auto">
 					</td>
 					<td style="padding:60px;padding-bottom:00px">
 						<!--<h3 style="font-family:courier;color:red;width:900px">About me</h3>	-->
