--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 		
 		<div class="onepage">
-				<h2 style="font-family:courier;color:rgb(160,40,090);text-align:left">Research Projects</h2>	
+				<h2 style="font-family:courier;color:rgb(160,40,090);text-align:left">Project Gallery</h2>	
 				<p title="About me" style="text-align:left">Research in IIIT-Hyderabad has helped me dive into the field of robotics giving me a good sense of the contemporary problems prevailing in the field.
 															I worked on the following projects
 															</p>
