--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
 		
 		<div class="onepage">
 				<h2 style="font-family:courier;color:rgb(160,40,090);text-align:left">Project Gallery</h2>	
-				<p title="About me" style="text-align:left">Research in IIIT-Hyderabad has helped me dive into the field of robotics giving me a good sense of the contemporary problems prevailing in the field.
-															I worked on the following projects
-															</p>
+				<p title="About me" style="text-align:left">This is where each of our endearing work is showcased</p>
 				<table border='1' align="center" style="text-align:left">
 				<tr>
 					<td style="padding:20px;padding-bottom:00px;">					
