--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="onepage" align="left"> 
 				<table border="0">
 					<td>
-						<img src="images/MA_site_small.png" alt="This is my pic" height="40%">
+						<img src="images/Istan1.png" alt="This is my pic" height="40%">
 					</td>
 					<td style="padding:60px;padding-bottom:00px">
 						<!--<h3 style="font-family:courier;color:red;width:900px">About me</h3>	-->
