naitri mod push

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
       <div class="profile">
         
-        <img src="assets/img/me.jpeg" alt="Naitri Rajyaguru" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html" alt="Naitri Rajyaguru  - University of Maryland">Naitri Rajyaguru</a></h1>
+        <img src="assets/img/me.jpeg" alt="Anurag V V" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html" alt="Anurag V V  - University of Maryland">Anurag V V</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/naitri-rajyaguru/" rel="noopener noreferrer" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/naitri" rel="noopener noreferrer" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:naitrir21@gmail.com" rel="noopener noreferrer" target="_blank" class="email"><i class="bx bx-mail-send"></i></a>
+          <a href="https://www.linkedin.com/in/anuragvv/" rel="noopener noreferrer" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/vvanurag" rel="noopener noreferrer" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:anuragpbox@gmail.com@gmail.com" rel="noopener noreferrer" target="_blank" class="email"><i class="bx bx-mail-send"></i></a>
           <a href="https://twitter.com/naitri_r" rel="noopener noreferrer" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         </div>
       </div>
