--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <img class="card-img-top img-fluid" src="assets/img/portfolio/swap.png" alt="Face swap">
               <div class="card-body portfolio-wrap">
                 <h5 class="card-title">Face Swap</h5>
-                <p class="card-text">Pipeline for swapping faces from images and videos
+                <p class="card-text">I want to edit this
                 </p>
               </div>
               <div class="portfolio-links">
