--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 </p>
               </div>
               <div class="portfolio-links">
-                <a href="https://github.com/Anurag/FaceSwap" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://google.com/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
