--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Favicons - ->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/favicon.png" rel="apple-touch-icon">
-
+  
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -59,7 +59,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">        
-        <img src="assets/img/me7.jpeg" alt="Anurag V V" class="img-fluid rounded-circle">
+        <img src="assets/img/decent.jpeg" alt="Anurag V V">
         <h1 class="text-light"><a href="index.html" alt="Anurag V V  - University of Maryland">Anurag V V</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/Anuragvv/" rel="noopener noreferrer" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -129,15 +129,13 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Anurag Visagakoti</h1>
       <div class="cen">
-        <p> Graduate Robotics Student 2</p> 
+        <p> Roboticist  </p>
       </div>
      
     </div>
-
   </section><!-- End Hero -->
 
   <main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" >
@@ -149,7 +147,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/me`.jpeg" class="img-fluid" alt="Anurag Visagakoti" max-width ="40" height="50">
+            <img style="height:500px;max-width:240px;width: expression(this.width > 500 ? 240: true);" src="assets/img/me4_3.jpeg" class="img-fluid" alt="Anurag Visagakoti">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Perception - Planning - Control</h3>
@@ -482,7 +480,7 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
+  <!-- ======= Footer ======= --
   <footer id="footer">
     <div class="container">
       <div class="copyright">
