--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="video-background">
         <!-- <div > -->
-        <video poster class="video" id="bgvid" poster="./assets/img/drone.jpg" playsinline autoplay muted >
+        <!--video poster class="video" id="bgvid" poster="./assets/img/drone.jpg" playsinline autoplay muted -->
           <!-- <source src="assets/videos/window.mp4" type="video/mp4"> -->
-          <script  src="./assets/js/videos.js"></script>
+          <!--script type="text/javascript" src="./test/canvas-nest.min.js.download"></script-->
         </video>
+        <script  src="./assets/js/videos.js"></script>
       <!-- </div> -->
     </div>
     <div class="hero-container" data-aos="fade-in">
