--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <!-- <div > -->
         <!--video poster class="video" id="bgvid" poster="./assets/img/drone.jpg" playsinline autoplay muted -->
           <!-- <source src="assets/videos/window.mp4" type="video/mp4"> -->
-          <!--script type="text/javascript" src="./test/canvas-nest.min.js.download"></script-->
+          <script type="text/javascript" src="./assets/js/canvas-nest.min.js.download"></script>
         </video>
         <script  src="./assets/js/videos.js"></script>
       <!-- </div> -->
