not working lol

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <!-- <source src="assets/videos/window.mp4" type="video/mp4"> -->
           <script src="./assets/js/canvas-nest.min.js.download"></script>
         </video>
-        <script  src="./assets/js/videos.js"></script>
+        <!--script  src="./assets/js/videos.js"></script-->
       <!-- </div> -->
     </div>
     <div class="hero-container" data-aos="fade-in">
