--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Anurag Visagakoti</h1>
       <div class="cen">
-        <p> Robotics & Computer Vision Research  </p>
+        <p> Robotics & Computer Vision Researcher  </p>
         <p> Site under construction  </p>
       </div>
       <body>
