--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                     <div class="col-md-8 col-sm-8">
                                     <p>
                                         <br />
-                                        <b>ORB_SLAM for quadrotor indoor navigation</b> <br />
+                                        <b>ORB_SLAM based object detection for quadrotor indoor navigation</b> <br />
                                         ORM_SLAM dense mapping and localization used for navigation of retail space emulations and for object detection.
 
                                     </p>
