--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                              <p>
 							<div>Robotics Researcher</div>
 							<div>Double Masters: ASU, IIIT-Hyderabad</div>
-							<div>Email:&nbsp;</td><td>vvisagak [at] asu (dot) edu</div>
+							<div>Email:&nbsp;</td><td>vvisagak [at] asu (dot) edu,  anuragpbox [at] gmail (dot) com</div>
 						<p/>
                             <p></p>
                             <a class="scroll-btn btn extra" href="cv/cv.pdf"><i class="fa fa-download"></i> Resume</a>
@@ -152,12 +152,24 @@
                     </div>
 
                 </div><!--/.row-->
-                <p>I have done double masters in robotics. My area of interest spans Simultaneous Localisation and Mapping (SLAM), Photogrammetry, 3D Representation, Manipulator mechanics, Visual servoing, deep learning applied to robotics</p>
+                
+
+                <p><b>Areas of Interest</b></p>
+                <p>My area of expertise spans Simultaneous Localisation and Mapping (SLAM), Photogrammetry,
+                    3D Representation, Manipulators, Visual servoing, deep learning applications in robotics.
+                    Most of my projects have been successful only in collaboration with amazing researchers and professors.
+                    Check out the awsome projects and you can reach out to me for any collaboration at my email above.  </p>
                 <p> </p>
-                <p><b>Background</b>: I did my Bachelors from VIT, Vellore followed by a Masters from IIIT-Hyderabad. I had the privilege
-                    of being guided by Prof. Suril.V Shah and Prof R. Madhava Krishna. I a currently working with Prof. Yezhao Yang as part
-                    of Active Perception group </p>
-                <p><b>Under Construction></b></p>
+                <p><b>About me</b></p>
+                <p>I hold double masters in field of robotics and autonomous systems. My 8+ years of industrial experience came from
+                    working with some amazing successful robotics startups in India along side working on some ground breaking projects at
+                    TCS Innovation Labs, Kolkata. Masters thesis work culminated in reserach papers published in ICRA and IROS among other
+                    international conferences. Work at ASU under Active perception lab along with Chi Yao and Prof. Yezhou Yang on 
+                    Implecit representation of 3D maps has been invaluible experience.
+                    </p>
+
+                
+                <p><b>.....Site Under Construction.....</b></p>
 
 
             </div><!--/.container-->
