--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                             <b>  Image Space based Path Planning for Reactionless Manipulation of Redundant Space Robot</b> <br />
                                             <b>V. V. Anurag</b> Rachit Bhargava    P. Mithun   A.H. Abdul Hafez    S. V. Shah   .
                                                 In International Conference on Robotics and Automation <b>(IROS) 2015</b><br />
-                                                <b><a href="https://cdn.iiit.ac.in/cdn/robotics.iiit.ac.in/uploads/Main/Publications/Rachit_etal_IROS_16.pdf">[PDF]</a> <a href="https://robotics.iiit.ac.in/publications/2016/Bhargava_Image-Space/">[Project Page]</a> </b>
+                                                <b><a href="https://cdn.iiit.ac.in/cdn/robotics.iiit.ac.in/uploads/Main/Publications/Rachit_etal_IROS_16.pdf">[PDF]</a> <a href="https://vvanurag.github.io/reactionless_visualservoing/">[Project Page]</a> </b>
                                         </p>
                                     </div>
                                     </div>
