--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
                     Check out the awsome projects and you can reach out to me for any collaboration at my email above.  </p>
                 <p> </p>
                 <p><b>About me</b></p>
-                <p>I hold double masters in field of robotics and autonomous systems. My 8+ years of industrial experience came from
-                    working with some amazing successful robotics startups in India along side working on some ground breaking projects at
-                    TCS Innovation Labs, Kolkata. Masters thesis work culminated in reserach papers published in ICRA and IROS among other
-                    international conferences. Work at ASU under Active perception lab along with Chi Yao and Prof. Yezhou Yang on 
-                    Implecit representation of 3D maps has been invaluible experience.
+                <p>I hold two masters in field of robotics and autonomous systems. My 8+ years of industrial experience came from
+                    working with some highly successful robotics startups in India along side working on some ground breaking projects at
+                    TCS Innovation Labs, Kolkata. Masters thesis culminated in reserach papers published in ICRA and IROS among other
+                    international conferences. Work at ASU under Active perception lab along with Chi Yao (PhD) and Prof. Yezhou Yang on 
+                    Implecit representation of 3D maps has been invaluible research experience.
                     </p>
 
                 
