--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </p>
 
                 
-                <p><b>.....Site Under Construction.....</b></p>
+                <p><b>.....Site Under Construction. Please use 'All' tab to see all projects.....</b></p>
 
 
             </div><!--/.container-->
